frontend/test/should_fail/index_exec_node_fromIndexSameAsArray_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:array<AEdge>)
{
	{ i=nodesFromIndexSameAsArray(fooi, 42) }
}
